--- a/.github/worckflow/main.yml
+++ b/.github/worckflow/main.yml
@@ -3,10 +3,10 @@ name: Backend Chat CI/CD
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
             
 jobs:
   ci:
@@ -29,16 +29,16 @@ jobs:
       - uses: actions/checkout@v1
         
       - name: Docker login 
-        run: docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build
         run: docker build --no-cache --progress=plain -t back .
         
       - name: Tags
         run: |
-            docker tag back ${{ secrets.USERNAME }}/back:${{ github.sha }}
-            docker tag back ${{ secrets.USERNAME }}/back:latest
+            docker tag back ${{ secrets.DOCKER_USER }}/back:${{ github.sha }}
+            docker tag back ${{ secrets.DOCKER_USER }}/back:latest
       - name: Push
         run: | 
-            docker push ${{ secrets.USERNAME }}/back:${{ github.sha }}
-            docker push ${{ secrets.USERNAME }}/back:latest
+            docker push ${{ secrets.DOCKER_USER }}/back:${{ github.sha }}
+            docker push ${{ secrets.DOCKER_USER }}/back:latest
