--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Frontend del programa de hola mundo",
   "dependencies": {
-    "backend": "git+https://github.com/usuario/backend.git#master"
+    "backend": "git+https://github.com/usuario/backend.git#main"
   },
   "scripts": {
     "start": "node index.js"
@@ -11,3 +11,4 @@
   "author": "",
   "license": "MIT"
 }
+
