--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Frontend del programa de hola mundo",
   "dependencies": {
-    "backend": "git+https://github.com/Adrian-AAB/my-app-backend.git"
+    "backend": "https://github.com/Adrian-AAB/my-app-backend.git"
   },
   "scripts": {
     "start": "node index.js"
@@ -11,4 +11,3 @@
   "author": "",
   "license": "MIT"
 }
-
